--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -4,7 +4,7 @@
 		@include cover-background('../assets/hero.jpg', true);
 
 		padding: 2.5rem;
-		margin-top: 4.1rem;
+		margin-top: 3.9rem;
 
 		@media (max-width: 768px){
 			margin-top: 0;
@@ -84,7 +84,9 @@
 
 		&#cosaFacciamo {
 			.row {
- 				display: flex;
+				 display: flex;
+				 margin-left: 0;
+				 margin-right: 0;
 			}
 			.col {
 				flex: 1;
@@ -100,6 +102,8 @@
 		&#comeContattarci{
 			.row {
 				margin-top: 1rem;
+				margin-left: 0;
+				margin-right: 0;
  				display: flex;
 			}
 			.col {
